--- a/app/views/member/index.html.erb
+++ b/app/views/member/index.html.erb
@@ -1,10 +1,26 @@
+<nav class="navbar navbar-default">
+    <div class="container">
+        <div class="navbar-header">
+	        <a class="navbar-brand" href="#">rais サンプル</a>
+	    </div>
+    </div>
+</nav>
 
-    <nav class="navbar navbar-default">
-	    <div class="container-fluid">
-	  	  <div class="navbar-header">
-          <span class="header-title">社員情報検索システム</span>
-	  	  </div>
-      </div>
-    </nav>
-
-<h1>hello world!</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+    	    <span class="h2">検索システム</span>
+        </div>
+    </div>
+    <br><br>
+    <div class="row">
+        <div class="col-xs-5">
+            <form>
+                <div class="form-group">
+                    <label>name</label>
+                    <input type="text" class="form-control" placeholder="name">
+                </div>
+                <button type="submit" class="btn btn-default">search</button>
+            </form>
+        </div>
+</div>
