--- a/app/views/member/index.html.erb
+++ b/app/views/member/index.html.erb
@@ -23,4 +23,5 @@
                 <button type="submit" class="btn btn-default">search</button>
             </form>
         </div>
+    </div>
 </div>
