--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,13 @@
   </head>
 
   <body>
+  <nav class="navbar navbar-default">
+    <div class="container">
+        <div class="navbar-header">
+	        <a class="navbar-brand" href="#">rais サンプル</a>
+	    </div>
+    </div>
+</nav>
     <%= yield %>
   </body>
 </html>
