--- a/app/views/member/index.html.erb
+++ b/app/views/member/index.html.erb
@@ -1,11 +1,3 @@
-<nav class="navbar navbar-default">
-    <div class="container">
-        <div class="navbar-header">
-	        <a class="navbar-brand" href="#">rais サンプル</a>
-	    </div>
-    </div>
-</nav>
-
 <div class="container">
     <div class="row">
         <div class="col-xs-12">
@@ -15,64 +7,16 @@
     <br><br>
     <div class="row">
         <div class="col-xs-5">
-            <form>
+            <form action="search" method="GET">
                 <div class="form-group">
-                    <label>name</label>
-                    <input type="text" id="name" class="form-control" placeholder="name">
+                    <label>名前</label>
+                    <input type="text" id="name" name="name" class="form-control" placeholder="name">
                 </div>
-                <button type="button" class="btn btn-primary" id="search-button">search</button>
+                <button type="submit" class="btn btn-primary" id="search-button">search</button>
             </form>
-        </div>
-    </div>
-    <br><br>
-    <div>
-        <div class="row">
-            <div class="col-xs-8">
-                <div id="result">
-                </div>
-            </div>
         </div>
     </div>
 </div>
 
 <script>
-    $('#search-button').click(function(){
-        var nameValue = $('#name').val();
-
-        // ajax
-        $.ajax({
-            type: "GET",
-            url: "/api/v1/member",
-            data: {
-                name: nameValue
-            },
-            dataType: 'json',
-            success: function(data) {
-                console.log('success');
-                dispMemberList(data);
-            },
-            error: function() {
-                console.log('error');
-            }
-        });
-    });
-
-    function dispMemberList(dataList) {
-        if (dataList.length == 0) {
-            $('#result').html('<h4 class="h4">検索結果は0件です。</h4>');
-        } else {
-            var res = '<table class="table table-bordered table-hover">'
-            res = res + '<tr class="bg-info"><th>ID</th><th>氏名</th><th>所属</th><th>電話番号</th><th>入社時期</th><th>誕生日</th></tr>';
-            for (var i = 0; i < dataList.length; i++) {
-                memberData = dataList[i];
-                res = res + '<tr>';
-                res = res + '<td>' + memberData.id + '</td><td>' + memberData.name +
-                        '</td><td>' + memberData.affiliation + '</td><td>' + memberData.tel +
-                        '</td><td>' + memberData.join_date + '</td><td>' + memberData.birthday + '</td>';
-                res = res + '</tr>';
-            }
-            res = res + '</table>';
-            $('#result').html(res);
-        }
-    }
 </script>
